# cookbook

./: .air.toml  .gitignore  base.templ  base_templ.go  crud.py  db.py  go.mod  go.sum  main.go  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  schemas.py  test.ipynb  utils.py
.zed/: settings.json
db/: crud.py  db.go  db.py  models.py
templates/: base.html  recipe-card.html  recipe-details.html  recipe-url-form.html  recipe.html  remove-recipe-button.html  save-recipe-button.html
