[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["Dávid Bartal <35382618+bartaldavid@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
recipe-scrapers = "^15.1.0"
fastapi = "^0.112.2"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
