[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["Dávid Bartal <35382618+bartaldavid@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
recipe-scrapers = "^15.2.1"
fastapi = {extras = ["standard"], version = "^0.115.2"}
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.34"
validators = "^0.34.0"
alembic = "^1.13.2"
sqlalchemy-utils = "^0.41.2"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
nanoid = "^2.0.0"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
